--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
+    "got": "^11.8.0",
     "install-peerdeps": "^3.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
@@ -53,6 +54,7 @@
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^5.2.0",
+    "got": "^11.8.0",
     "knex": "^1.0.2",
     "morgan": "^1.10.0",
     "objection": "^3.0.1",
