--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     "react-select": "^5.2.2",
     "redbox-react": "~1.6",
     "sass-loader": "^8.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
     "style-loader": "^1.2.1",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
