--- a/server/package.json
+++ b/server/package.json
@@ -48,9 +48,11 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "dotenv": "^8.2.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cheerio": "^1.0.0-rc.10",
     "cookie-session": "^2.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^5.2.0",
