--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@babel/runtime": "^7.6.2",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "~8.1",
+    "chart.js": "^3.7.1",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "foundation-sites": "^6.7.4",
@@ -35,6 +36,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "~15.7",
     "react": "~16.13",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "~16.13",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "5.2",
