--- a/client/package.json
+++ b/client/package.json
@@ -39,9 +39,11 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "~16.13",
     "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.2",
     "react-select": "^5.2.2",
     "redbox-react": "~1.6",
+    "redux": "^4.1.2",
     "sass-loader": "^8.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
