--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^3.0.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
+    "formik": "^2.2.9",
     "foundation-sites": "^6.7.4",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^0.9.0",
