--- a/server/package.json
+++ b/server/package.json
@@ -48,12 +48,13 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.74",
     "axios": "^0.25.0",
-    "dotenv": "^8.2.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cheerio": "^1.0.0-rc.10",
     "cookie-session": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.2",
     "express-handlebars": "^5.2.0",
     "got": "^11.8.0",
