--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react": "~16.13",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "~16.13",
+    "react-dropzone": "^12.0.4",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2",
