--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.1.3",
     "babel-loader": "~8.1",
     "chart.js": "^3.0.0",
     "css-loader": "^5.0.0",
