--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "~16.13",
+    "sass": "^1.57.1",
     "webpack-dev-server": "~3.11"
   },
   "dependencies": {
@@ -47,6 +48,7 @@
     "react-select": "^5.2.2",
     "redbox-react": "~1.6",
     "redux": "^4.1.2",
+    "sass": "^1.57.1",
     "sass-loader": "^8.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
