--- a/server/package.json
+++ b/server/package.json
@@ -68,6 +68,7 @@
     "objection-unique": "^1.2.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "twilio": "^3.84.0"
   }
 }
